    TODO: Find a way to fix broken file watching of script path eftir pressing "New"
    TODO: Create automated tests for command line tool using PlistBuddy etc.
    TODO: Implement a REFRESH command to reset web view HTML

    * Moved documentation to Markdown format from raw HTML


5.2
    * Platypus apps can now register as URL scheme handlers and receive opened URLs as arguments to script
    * Platypus apps can now accept dragged URLs
    * Platypus apps that accept dropped files now have an Open Recent menu
    * New syntax to create submenus in Status Menu interface type
    * Relative paths are now supported in Platypus Profiles, but only through manual editing. Platypus app and CLT still generate Profiles with absolute paths.
    * Platypus now warns about about identical file names in bundled files
    * Droplet apps now quit when their window is closed
    * Updated and improved example profiles demonstrating new features
    * Text in Platypus apps now has a minimum font size
    * The Platypus Profile format has changed slightly in this version, but old formats can still be read
    * Fixed annoying issue where status menu would render before receiving all script output
    * Fixed performance issue with printing many lines to text window. It is now very fast again.
    * Fixed issue where loading certain Example profiles would cause Platypus to crash
    * Fixed bug where "Use as template" was shown when Status Item mode was "Text"
    * Fixed bug where command line tool failed to infer app name from script filename, resulting in "(null).app"
    * Fixed bug where files that had been moved were not colored red in Bundled Files list
    * Fixed bug where valid menu items were disabled in Action menu
    * Fixed issue with console spamming due to missing CFBundleTypeRole. Now always "Viewer".
    * Fixed bug where text settings were not properly loaded by the GUI
    * Fixed bug where bundling files with the -f flag didn't work in the command line tool