@@ -29,6 +29,7 @@
  */
 
 #import <Cocoa/Cocoa.h>
+#import "Common.h"
 
 @interface PlatypusScriptAnalyser : NSObject
 
